@@ -2,17 +2,16 @@ package org.huy.demo.topic;
 
 import org.springframework.stereotype.Service;
 
-import java.util.Arrays;
+import java.util.ArrayList;
 import java.util.List;
 
 @Service
 public class TopicService {
-    private List<Topic> topics = Arrays.asList(
+    private final List<Topic> topics = new ArrayList<>(List.of(
             new Topic("spring", "Spring Framework", "Learn Spring"),
             new Topic("java", "Java Core", "Learn Java"),
             new Topic("javascript", "JavaScript", "Learn Javascript")
-    );
-
+    ));
 
     public List<Topic> getAllTopics() {
         return topics;
@@ -24,5 +23,9 @@ public class TopicService {
                 .filter(topic -> topic.getId().equals(id))
                 .findAny()
                 .orElseGet(() -> new Topic("Not found", null, null));
+    }
+
+    public void addTopic(Topic topic) {
+        topics.add(topic);
     }
 }
